<resources>
    <string name="app_name">Sklad</string>
    <string name="add_doc">Добавить документ</string>
    <string name="add_bar_code">добавить</string>
    <string name="open_list_doc">Открыть список</string>
    <string name="update_directories">Обновить справочники</string>
    <string name="update_products">Обновить номенклатуру</string>
    <string name="update_cells">Обновить ячейки</string>
    <string name="input_residues">Ввод остатков</string>
    <string name="password_form_header">Ваш логин/пароль...</string>
    <string name="login">логин</string>
    <string name="password">пароль</string>
    <string name="butt_OK">OK</string>
    <string name="success">Все ОК</string>
    <string name="error">Доступ запрещен!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="new_doc">Новый документ</string>
    <string name="list_doc">Список документов</string>
    <string name="save_doc">Записать документ</string>
    <string name="push_doc">Отправить документ в ЦБ</string>
    <string name="products">Товары</string>
    <string name="cells">Ячейки</string>
    <string name="back">назад</string>
    <string name="textNoInternet">Отсутствует соединение с сервером. Проверьте подключение к Интернет.</string>
    <string-array name="type_doc">
        <item>ввод остатка</item>
        <item>пересчет</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
